# group7

./: 2nd-2.py  README.md  crawling(2).py  crawling_data.pickle  data_road.py  packages.txt  pyproject.toml  qualification.txt  requirements.txt  visarule.pickle
