[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "0.1.0"
dependencies = [
    "streamlit==1.21.0",
    "openai==0.27.7",
    "numpy==1.23.5",
    "faiss-cpu==1.7.3",
    "requests==2.31.0",
    "PyMuPDF==1.22.5",
    "PyPDF2==3.0.1",
]

[tool.poetry.dependencies]
python = "^3.8"
